confugured for use pictures folder with absolute path

--- a/Web Manager v.2/Views/Manage/Edit.cshtml
+++ b/Web Manager v.2/Views/Manage/Edit.cshtml
@@ -27,7 +27,7 @@
     <input type="hidden" name="id" value="@id" />
     <input type="text" name="partname" value="@partName" size="80" />
     <br />
-    <img src="@PictureProcessing.PictureProcessor.picturePath/@pictureName" width="300" onclick="ShowImage()" />
+    <img src="@PictureProcessing.PictureProcessor.picturePathWeb/@pictureName" width="300" onclick="ShowImage()" />
     <input type="hidden" name="picture" value="@pictureName" />
     <br />
     <input type="text" name="parttype" value="@partType" size="80" />
