move Articles table to Common Database

--- a/Web Manager v.2/Views/Manage/Index.cshtml
+++ b/Web Manager v.2/Views/Manage/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
 
     var myContext = new CommonModels.ElectronicsWarehouseContext();
+    //var myContext = new Web_Manager_v._2.Data.ApplicationDbContext();
 
     var partsList = myContext.Articles;
 
