--- a/Web Manager v.2/Views/Manage/Edit.cshtml
+++ b/Web Manager v.2/Views/Manage/Edit.cshtml
@@ -2,7 +2,7 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-   
+
 
     var idNum = (string)ViewData["Id"];
 
@@ -13,6 +13,8 @@
     var partType = myArticle.PartType;
     var price = myArticle.Price;
     var id = myArticle.Id;
+
+    
 
 
 }
@@ -34,6 +36,7 @@
     <br />
     <input type="text" name="price" value="@price" size="2" />лв.
     <br />
+    Added by @myArticle.OwnerUser
     <br />
     <input type="submit" value="приложи" />
     <input type="button" value="обратно" onclick="Return()" />
