--- a/Web Student/Views/Homework/SubmitMyHomework.cshtml
+++ b/Web Student/Views/Homework/SubmitMyHomework.cshtml
@@ -1,10 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
-
-<centre>Артикулът е добавен !</centre>
+﻿<centre>Домашното ви е добавено !</centre>
 
 <input type="button" value="обратно" onclick="Close()" />
 <script>
