--- a/Web Student/Views/Homework/AddHomework.cshtml
+++ b/Web Student/Views/Homework/AddHomework.cshtml
@@ -1,21 +1,19 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
-
+﻿
 
 <form method="post" asp-action="SubmitPart">
-    <input type="url" name="href" /> снимка
+    <input type="url" name="studentname" /> избери ученик
     <br />
     <br />
-    <input type="text" name="partname" /> име на частта
+    <input type="url" name="href" /> задание (снимка или файл)
+    <br />
+    <br />
+    <input type="text" name="partname" /> име на домашното
     <br />
     <br />
     <input type="text" name="parttype" /> описание
     <br />
     <br />
-    <input type="text" name="price" /> цена
+    <input type="text" name="price" /> точки
     <br />
     <br />
     <input type="submit" value="добави" />
