added downloading local files

--- a/Web Student/Views/Profile/Index.cshtml
+++ b/Web Student/Views/Profile/Index.cshtml
@@ -16,14 +16,12 @@
 Потребителско име : @ViewBag.userData.UserFK
 <br />
 
-<img src="@PictureProcessing.PictureProcessor.profilePathWeb/@ViewBag.userData.PictureName" />
-<br />
-
+<a asp-action="EditMyPicture"><img src="@PictureProcessing.PictureProcessor.profilePathWeb/@ViewBag.userData.PictureName" /></a>
+@ViewBag.userData.PictureName
 
 
 <form method="post" asp-action="SubmitProfile">
     <input type="hidden" name="id" value="id" />
-    снимка: <input type="text" name="picturename" value="@ViewBag.userData.PictureName" size="47" />
     <br />
     име: <input type="text" name="fullname" value="@ViewBag.userData.FullName" size="50" />
     <br />
