Add homework folder and other...

--- a/Web Student/Views/Homework/AddHomework.cshtml
+++ b/Web Student/Views/Homework/AddHomework.cshtml
@@ -1,10 +1,10 @@
 ﻿
 
-<form method="post" asp-action="SubmitPart">
+<form method="post" asp-action="SubmitMyHomework" enctype="multipart/form-data" >
     <input type="url" name="studentname" /> избери ученик
     <br />
     <br />
-    <input type="url" name="href" /> задание (снимка или файл)
+    <input type="file" name="file" /> задание (снимка или файл)
     <br />
     <br />
     <input type="text" name="partname" /> име на домашното
