--- a/Web Student/Views/Homework/Index.cshtml
+++ b/Web Student/Views/Homework/Index.cshtml
@@ -22,9 +22,9 @@
 
             <div ondblclick="GetRow(@part.Id)" class="col-md-3">
 
-                <img src="@PictureProcessing.PictureProcessor.picturePathWeb/@PictureProcessing.PictureProcessor.GetSmallName(part.PictureName)" />
+                <img src="@PictureProcessing.PictureProcessor.picturePathWeb/@PictureProcessing.PictureProcessor.GetSmallName(part.SolutionPicture)" />
                 <br />
-                @part.PictureName
+                @part.SolutionPicture
                 <br />
             </div>
 
