--- a/Web Student/Views/Homework/MyHomeworks.cshtml
+++ b/Web Student/Views/Homework/MyHomeworks.cshtml
@@ -4,16 +4,17 @@
 <h2>Моите домашни</h2>
 
 <br />
-Списък със занятия:
+<span>Занятие:</span> <span style="position:relative; left: 200px;">Задача за домашно:</span> <span style="position:relative; left: 400px;">Решение:</span>
 <br />
 
 
 @{
     int cnt = 1;
-    var Tasks = ViewData["Tasks"];
-    foreach (var task in (string[])Tasks)
+    var myHomeworks = ViewBag.myHomeworks;
+    foreach (var homework in myHomeworks)
     {
-        <div>@cnt. @task <button onclick="window.open('/Homework/ApplyHomework')">Качи домашно</button></div>
+        <div>@cnt. @homework.TaskNotes <a href="default.asp"><img src="/pictures/file3.png" alt="HTML tutorial" style="width:26px;"></a> <span style="position:relative; left: 150px">@homework.SolutionNotes</span> <button onclick="window.open('/Homework/ApplyHomework')">Качи домашно</button></div>
+        
         cnt++;
     }
 }
