--- a/Web Student/Views/Profile/EditMyPicture.cshtml
+++ b/Web Student/Views/Profile/EditMyPicture.cshtml
@@ -4,7 +4,7 @@
 
 <h4>Променете вашата снимка</h4>
 
-<h6>име на снимка: @ViewBag.profileData.PictureName </h6>
+<h6>име на снимка: @ViewBag.pictureName </h6>
 
 <br />
 <form method="post" asp-action="SubmitProfilePicture" enctype="multipart/form-data">
