removed PictureName column and some editions on user picture managing

--- a/Web Student/Views/Admin/Index.cshtml
+++ b/Web Student/Views/Admin/Index.cshtml
@@ -23,7 +23,7 @@
 
                     <div ondblclick="GetRow(@student.Id)" class="col-md-3">
                         @{
-                            var picture = student.PictureName;
+                            var picture = $"{student.UserFK}_small.jpg";
                             if(picture == null || picture == string.Empty)
                             {
                                 picture = "student_small.jpg";
