--- a/Web Student/Views/Profile/Index.cshtml
+++ b/Web Student/Views/Profile/Index.cshtml
@@ -16,8 +16,8 @@
 Потребителско име : @ViewBag.userData.UserFK
 <br />
 
-<img src="@PictureProcessing.PictureProcessor.profilePathWeb/@(ViewBag.userData.UserFK)_small.jpg" />
-@(ViewBag.userData.UserFK)_small.jpg
+<img src="@PictureProcessing.PictureProcessor.profilePathWeb/@(ViewBag.picture)" />
+@(ViewBag.picture)
 
 <form method="post" asp-action="SubmitProfile" enctype="multipart/form-data">
     <input type="hidden" name="id" value="id" />
