--- a/Web Student/Views/Homework/ApplyHomework.cshtml
+++ b/Web Student/Views/Homework/ApplyHomework.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿homework Id: 
 <form method="post" asp-action="SubmitMyHomework" enctype="multipart/form-data">
     <input type="file" name="file" /> решение (снимка или файл)
     <br />
