added functionality to add and remove tasks from teacher

--- a/Web Student/Views/Admin/Index.cshtml
+++ b/Web Student/Views/Admin/Index.cshtml
@@ -30,7 +30,7 @@
                             }
 
                         }
-                        <a asp-controller="Homeworks" asp-action="MyHomeworks">
+                        <a href="Homework/MyHomeworks/@(student.Id)">
                             <img src="@PictureProcessing.PictureProcessor.profilePathWeb/@picture" />
                         </a>
                         <br />
